--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -25,77 +25,75 @@
   </div>
   include "iframe-contents.html"
 </div>
-<div class="ui left treemap sidebar">
-  <div id="treemap" style="width: 100%; height: 98%"></div>
+<div class="ui left browse sidebar">
+  <div id="browse" style="width: 100%; height: 98%"></div>
 </div>
 <div class="ui content">
-  <div class="ui content container">
-    <div class="team content hidden">
-    include "team.html"
+  <div class="ui grey mini menu" style="margin: 2px">
+    <a title="Show team" class="ui team toggle item">
+      <i class="users icon"></i>
+    </a>
+    <a title="Show search" class="ui scrape toggle item">
+      <i class="sun icon"></i>
+    </a>
+    <a title="Show query filters" class="ui search toggle item">
+      <i class="filter icon"></i>
+      <span id="searchCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /><span>
+    </a>
+    <div class="item">
+      <div class="ui small query icon input">
+        <input id="termSearch" type="text" placeholder="Query..." />
+        <i class="search icon query submit"></i>
+      </div>
     </div>
-    <div class="search content hidden">
-    include "query.html"
+    <div class="item">
+      <div class="ui red selected label">0</div>
     </div>
-    <div class="scrape content hidden">
-    include "scrape.html"
+    <a title="Select all" class="select all item">
+      <i class="checkmark icon"></i>
+    </a>
+    <a title="Invert selection" class="select invert item">
+      <i class="checkmark sign icon"></i> 
+    </a>
+    <a title="Annotate selected items" class="disabled annotate requires selected item">
+      <i class="tag icon"></i>
+    </a>
+    <a title="Delete selected items" class="disabled delete requires selected item">
+      <i class="trash icon"></i> 
+    </a>
+    <a title="Toggle item details" class="details toggle item">
+      <i class="edit icon"></i> 
+    </a>
+    <a title="Toggle items visualisation" class="graph item">
+      <i class="unhide icon"></i> 
+    </a>
+    <div title="Sign out" class="right menu">
+      <a class="signout item">
+        <i class="sign out icon"></i> 
+      </a>
     </div>
+  </div>
+  <div class="team content hidden">
+  include "team.html"
+  </div>
+  <div class="search content hidden">
+  include "query.html"
+  </div>
+  <div class="scrape content hidden">
+  include "scrape.html"
+  </div>
 
-    <div id="uploadInfo" class="hidden">
-      <p id="upload" class="hidden"><label>Your browser doesn't support drag & drop, but you can still upload via this input field:<br /><input type="file"></label></p>
-      <p id="filereader">File API & FileReader API not supported</p>
-      <p id="formdata">XHR2's FormData is not supported</p>
-      <p id="progress">XHR2's upload progress isn't supported</p>
-    </div>
-    <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
+  <div id="uploadInfo" class="hidden">
+    <p id="upload" class="hidden"><label>Your browser doesn't support drag & drop, but you can still upload via this input field:<br /><input type="file"></label></p>
+    <p id="filereader">File API & FileReader API not supported</p>
+    <p id="formdata">XHR2's FormData is not supported</p>
+    <p id="progress">XHR2's upload progress isn't supported</p>
+  </div>
+  <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
 
-    <div class="ui grey mini menu" style="margin: 2px">
-      <a title="Show team" class="ui team toggle item">
-        <i class="users icon"></i>
-      </a>
-      <a title="Show search" class="ui scrape toggle item">
-        <i class="sun icon"></i>
-      </a>
-      <a title="Show query filters" class="ui search toggle item">
-        <i class="filter icon"></i>
-        <span id="searchCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /><span>
-      </a>
-      <div class="item">
-        <div class="ui small query icon input">
-          <input id="termSearch" type="text" placeholder="Query..." />
-          <i class="search icon query submit"></i>
-        </div>
-      </div>
-      <div class="item">
-        <div class="ui red selected label">0</div>
-      </div>
-      <a title="Select all" class="select all item">
-        <i class="checkmark icon"></i>
-      </a>
-      <a title="Invert selection" class="select invert item">
-        <i class="checkmark sign icon"></i> 
-      </a>
-      <a title="Annotate selected items" class="disabled annotate requires selected item">
-        <i class="tag icon"></i>
-      </a>
-      <a title="Delete selected items" class="disabled delete requires selected item">
-        <i class="trash icon"></i> 
-      </a>
-      <a title="Toggle item details" class="details toggle item">
-        <i class="edit icon"></i> 
-      </a>
-      <a title="Toggle items visualisation" class="graph item">
-        <i class="unhide icon"></i> 
-      </a>
-      <div title="Sign out" class="right menu">
-        <a class="signout item">
-          <i class="sign out icon"></i> 
-        </a>
-      </div>
-    </div>
-    <div class="ui search results" id="holder" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
-      <div id="results" style="width: 100%">
-        <div class="table content"></div>
-    </div>
+  <div class="ui search results" id="holder" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
+    <div id="results" style="width: 100%">
+      <div class="table content"></div>
   </div>
 </div>
 
