--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -26,10 +26,10 @@
     </div>
   </div>
   <div class="ui form" style="background: #ffe; padding: 4px; padding-bottom: 0px">
-    <div class="inline field">
+    <div class="two inline fields">
       
       <label for="treeFilter">Filter (<span id="annotationCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /></span>)</label>
-      <input id="treeFilter">
+      <input id="treeFilter" />
     </div>
     <div id="treeContainer" style="font-size: 80%; overflow: auto; padding: 4px">
   </div>
