--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -16,9 +16,9 @@
       <i class="reorder icon"></i>
       <div id="itemContext" class="menu"></div>
     </div>
-    <div title="Validate annotation" class="ui mini button"><i class="green checked checkbox icon"></i></div>
-    <div title="Unvalidated annotation" class="ui mini button"><i class="yellow empty checkbox icon"></i></div>
-    <div title="Erase annotation" class="ui mini button"><i class="red eraser icon"></i></div>
+    <div title="Validate annotation" class="ui mini validate annotation button"><i class="green checked checkbox icon"></i></div>
+    <div title="Unvalidated annotation" class="ui mini unvalidate annotation button"><i class="yellow empty checkbox icon"></i></div>
+    <div title="Erase annotation" class="ui mini erase annotation button"><i class="red eraser icon"></i></div>
     <div title="New annotation" class="ui mini add button">
       <i class="add icon"></i>
     </div>
