adding treemap for annotations browse

--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -34,10 +34,11 @@
       </div>
       <div class="two wide function field">
         <div class="field">
-          <button class="ui blue mini query submit button" id="searchForm">Search</button> &nbsp;
+          <label for="browseNav">Navigator</label>
+          <select id="browseNav"><option value="">None</option><option value="cluster">Cluster</option><option value="annotations">Annotations</option></select>
         </div>
         <div class="field">
-          <button class="ui mini treemap submit button">Cluster</button>
+          <button class="ui blue mini query submit button" id="searchForm">Search</button> &nbsp;
         </div>
       </div>
     </div>
