--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -26,7 +26,7 @@
   </div>
   include "iframe-contents.html"
 </div>
-<div class="ui left browse sidebar">
+<div class="ui left very wide browse sidebar">
   <div id="browse" style="width: 100%; height: 98%"></div>
 </div>
 <div class="ui content">
@@ -61,8 +61,8 @@
         <a title="Timeline view" class="scatter visualisation item">
           Scatter
         </a>
-        <a title="Treemap view" class="treemap visualisation item">
-          Treemap
+        <a title="Treemap view" class="debug visualisation item">
+          Debug
         </a>
       </div>
     </div>
@@ -184,7 +184,8 @@
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.min.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/cluster-treemap.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/browseCluster.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/browseAnnotations.js"></script>
 
 <script src="<!-- @var HOMEPAGE -->member.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
