--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -1,4 +1,4 @@
-  <div class="ui function form">
+  <form class="ui function query form">
     <div class="fields">
       <div class="two wide function field">
         <h1 style="text-align: center">Filter</h1>
@@ -80,4 +80,4 @@
         </div>
       </div>
     </div>
-  </div>
+  </form>
