--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -38,7 +38,7 @@
           <select id="browseNav"><option value="">None</option><option value="cluster">Cluster</option><option value="annotations">Annotations</option></select>
         </div>
         <div class="field">
-          <button class="ui blue mini query submit button" id="searchForm">Search</button> &nbsp;
+          <button class="ui blue mini query submit button" id="queryForm">Query</button> &nbsp;
         </div>
       </div>
     </div>
@@ -54,15 +54,15 @@
           <input id="toDate" />
         </div>
         <div class="field">
-          <label for="searchMember">Member</label>
-          <input id="searchMember" />
+          <label for="queryMember">Member</label>
+          <input id="queryMember" />
         </div>
       </div>
       <div class="column">
         <div class="ui fluid form segment">
           <div class="field">
-            <label for="searchName">Save</label>
-            <input name="searchName" />  <button class="ui mini button"><i class="save icon"></i></button>
+            <label for="queryName">Save</label>
+            <input name="queryName" />  <button class="ui mini button"><i class="save icon"></i></button>
           </div>
           <div class="field">
             <div class="ui checkbox">
@@ -71,8 +71,8 @@
             </div>
           </div>
           <div>
-            <h4>Existing searches</h4>
-            <div id="existingScrapes">
+            <h4>Existing queries</h4>
+            <div id="existingQueries">
             </div>
             <div class="field">
             </div>
