remove left title column

--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -1,14 +1,11 @@
-  <form class="ui function query form">
+  <form class="ui function query form" style="padding: 4px">
     <div class="fields">
-      <div class="two wide function field">
-        <h1 style="text-align: center">Filter</h1>
-       </div>
-      <div class="three wide function field">
+      <div class="four wide function field">
         <label for="annoMember">Member</label>
         <input class="query input" id="annoMember" />
         <select id="annotationState"><option value="visited">Visited</option><option value="requested">Annotation requested</option><option value="provided">Annotation provided</option></select>
       </div>
-      <div class="three wide function field">
+      <div class="four wide function field">
         <label for="annoSearch">Annotations</label>
         <input class="query input" id="annoSearch" />
       </div>
@@ -38,7 +35,7 @@
           <select id="browseNav"><option value="">None</option><option value="cluster">Cluster</option><option value="annotations">Annotations</option></select>
         </div>
         <div class="field">
-          <button class="ui blue mini query submit button" id="queryForm">Query</button> &nbsp;
+          <button class="ui blue mini query submit button" id="queryForm">Update</button> &nbsp;
         </div>
       </div>
     </div>
