--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -1,8 +1,5 @@
-<div class="ui function scraping form">
+<div class="ui function scraping form" style="padding: 4px">
   <div class="fields">
-    <div class="two wide function field">
-      <h1 style="text-align: center">Search</h1>
-    </div>
     <div class="four wide function field">
       <div class="field">
         <label for="scrapeInput">Input</label>
@@ -39,7 +36,7 @@
         <button disabled class="ui mini schedule search button"><i class="time icon"></i></button> <span id="searchSchedule">unscheduled</span>
       </div>
     </div>
-    <div class="two wide function field">
+    <div class="four wide function field">
       <div class="field">
         <label for="targetResults">
           Target results
