--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -6,8 +6,13 @@
         <select id="annotationState"><option value="visited">Visited</option><option value="requested">Annotation requested</option><option value="provided">Annotation provided</option></select>
       </div>
       <div class="four wide function field">
-        <label for="annoSearch">Annotations</label>
-        <input class="query input" id="annoSearch" />
+        <div class="field">
+          <label for="annoSearch">Annotations</label>
+          <input class="query input" id="annoSearch" />
+        </div>
+        <div class="inline field">
+          Results <select id="browseNum"><option value="100">100</option><option selected value="500">500</option><option value="1000">1000</option><option value="2000">2000</option><option value="5000">5000</option></select>
+        </div>
       </div>
       <div class="three wide function field">
         <div class="inline field">
@@ -20,7 +25,7 @@
             <option value="queued">Not visited (queued)</option>
           </select>
         </div>
-        <div class="field">
+        <div class="inline field">
           <span class="ui checkbox">
             <input id="refreshQueries" type="checkbox" />
             <label for="refreshQueries" id="refreshLabel" title="Refreshes the query results periodically">Refresh</label>
