adding search scheduling

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -190,4 +190,8 @@
 <script src="<!-- @var HOMEPAGE -->member.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
 
+<link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.css" />
+<script defer="true" type="text/javascript" src="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.js"></script>
+<script defer="true" type="text/javascript" src="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.en.js"></script>
+
 </html>
