--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -29,11 +29,11 @@
     <div class="four wide field">
       <h3>Persistent search</h3>
       <div class="field">
-        <label for="scrapeSave">Name</label> 
-        <input name="scrapeName" />  <button class="ui mini button"><i class="save icon"></i></button>
+        <input class="cron edit" style="display: none" />
       </div>
       <div class="field">
-        <button disabled class="ui mini schedule search button"><i class="time icon"></i></button> <span id="searchSchedule">unscheduled</span>
+        <label for="scrapeSave">Name</label> 
+        <input name="scrapeName" />  <button class="ui mini button"><i class="save icon"></i></button>
       </div>
     </div>
     <div class="four wide function field">
