--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -26,17 +26,7 @@
         <input id="scrapeTags" />
       </div>
     </div>
-    <div class="four wide field">
-      <h3>Persistent search</h3>
-      <div class="field">
-        <input class="cron edit" style="display: none" />
-      </div>
-      <div class="field">
-        <label for="scrapeSave">Name</label> 
-        <input name="scrapeName" />  <button class="ui mini button"><i class="save icon"></i></button>
-      </div>
-    </div>
-    <div class="four wide function field">
+    <div class="two wide function field">
       <div class="field">
         <label for="targetResults">
           Target results
@@ -51,6 +41,16 @@
         <label for="refreshScrape">
           Refresh results
         </label>
+      </div>
+    </div>
+    <div class="six wide field">
+      <h3>Persistent search</h3>
+      <div class="field">
+        <input class="cron edit" style="display: none" />
+      </div>
+      <div class="two inline fields">
+        <label for="scrapeSave">Name</label> 
+        <input id="scrapeName" style="width: 60%" />  <button class="ui mini button"><i class="save icon"></i></button>
       </div>
     </div>
   </div>
