--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -1,51 +1,39 @@
-  <form class="ui function query form" style="padding: 4px">
-    <div class="fields">
-      <div class="four wide function field">
-        <label for="annoMember">Member</label>
-        <input class="query input" id="annoMember" />
-        <select id="annotationState"><option value="visited">Visited</option><option value="requested">Annotation requested</option><option value="provided">Annotation provided</option></select>
+<form class="ui function query form" style="padding: 4px">
+  <div class="fields">
+    <div class="two wide function field">
+      <label for="annoMember">Member</label>
+      <input class="query input" id="annoMember" />
+      <select id="annotationState"><option value="visited">Visited</option><option value="requested">Annotation requested</option><option value="provided">Annotation provided</option></select>
+    </div>
+    <div class="three wide function field">
+      <div class="field">
+        <label for="annoSearch">Annotations</label>
+        <input class="query input" id="annoSearch" />
       </div>
-      <div class="four wide function field">
-        <div class="field">
-          <label for="annoSearch">Annotations</label>
-          <input class="query input" id="annoSearch" />
-        </div>
-        <div class="inline field">
-          Results <select id="browseNum"><option value="100">100</option><option selected value="500">500</option><option value="1000">1000</option><option value="2000">2000</option><option value="5000">5000</option></select>
-        </div>
-      </div>
-      <div class="three wide function field">
-        <div class="inline field">
-          <select id="validationState">
-            <option value="all">Everything</option>
-            <option value="val">Has validated</option>
-            <option value="unval">Has unvalidated</option>
-            <option value="notann">Not annotated</option>
-            <option value="valOrUnval">Visited, no annotations</option>
-            <option value="queued">Not visited (queued)</option>
-          </select>
-        </div>
-        <div class="inline field">
-          <span class="ui checkbox">
-            <input id="refreshQueries" type="checkbox" />
-            <label for="refreshQueries" id="refreshLabel" title="Refreshes the query results periodically">Refresh</label>
-          </span>
-        </div>
-      </div>
-      <div class="three wide field">
-      </div>
-      <div class="two wide function field">
-        <div class="field">
-          <label for="browseNav">Navigator</label>
-          <select id="browseNav"><option value="">None</option><option value="cluster">Cluster</option><option value="annotations">Annotations</option></select>
-        </div>
-        <div class="field">
-          <button class="ui blue mini query submit button" id="queryForm">Update</button> &nbsp;
-        </div>
+      <div class="inline field">
+        Results <select id="browseNum"><option value="100">100</option><option selected value="500">500</option><option value="1000">1000</option><option value="2000">2000</option><option value="5000">5000</option></select>
       </div>
     </div>
-
-    <div class="ui two column stackable page grid" style="display: none">
+    <div class="three wide function field">
+      <div class="inline field">
+        <select id="validationState">
+          <option value="all">Everything</option>
+          <option value="val">Has validated</option>
+          <option value="unval">Has unvalidated</option>
+          <option value="notann">Not annotated</option>
+          <option value="valOrUnval">Visited, no annotations</option>
+          <option value="queued">Not visited (queued)</option>
+        </select>
+      </div>
+      <div class="inline field">
+        <span class="ui checkbox">
+          <input id="refreshQueries" type="checkbox" />
+          <label for="refreshQueries" id="refreshLabel" title="Refreshes the query results periodically">Refresh</label>
+        </span>
+      </div>
+    </div>
+    <!--
+    <div class="ui three wide column stackable page grid" style="display: none">
       <div class="column">
         <div class="field">
           <label for="fromDate">From</label>
@@ -60,26 +48,16 @@
           <input id="queryMember" />
         </div>
       </div>
-      <div class="column">
-        <div class="ui fluid form segment">
-          <div class="field">
-            <label for="queryName">Save</label>
-            <input name="queryName" />  <button class="ui mini button"><i class="save icon"></i></button>
-          </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input id="subscribeSearch" type="checkbox" name="subscribeSearch">
-              <label for="subscribeSearch">Subscribe</label>
-            </div>
-          </div>
-          <div>
-            <h4>Existing queries</h4>
-            <div id="existingQueries">
-            </div>
-            <div class="field">
-            </div>
-          </div>
-        </div>
+    </div>
+    -->
+    <div class="three wide function field">
+      <div class="field">
+        <label for="browseNav">Navigator</label>
+        <select id="browseNav"><option value="">None</option><option value="cluster">Cluster</option><option value="annotations">Annotations</option></select>
+      </div>
+      <div class="field">
+        <button class="ui blue mini query submit button" id="queryForm">Update</button> &nbsp;
       </div>
     </div>
-  </form>
+  </div>
+</form>
