--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -1,11 +1,11 @@
 <form class="ui function query form" style="padding: 4px">
   <div class="fields">
-    <div class="two wide function field">
+    <div class="four wide function field">
       <label for="annoMember">Member</label>
       <input class="query input" id="annoMember" />
       <select id="annotationState"><option value="visited">Visited</option><option value="requested">Annotation requested</option><option value="provided">Annotation provided</option></select>
     </div>
-    <div class="three wide function field">
+    <div class="four wide function field">
       <div class="field">
         <label for="annoSearch">Annotations</label>
         <input class="query input" id="annoSearch" />
@@ -14,7 +14,7 @@
         Results <select id="browseNum"><option value="100">100</option><option selected value="500">500</option><option value="1000">1000</option><option value="2000">2000</option><option value="5000">5000</option></select>
       </div>
     </div>
-    <div class="three wide function field">
+    <div class="four wide function field">
       <div class="inline field">
         <select id="validationState">
           <option value="all">Everything</option>
