--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -170,6 +170,17 @@
     <button class="ui confirm annotate button">Yes</button>
   </div>
 </div>
+<div class="ui search load modal hidden form">
+  <div class="content">
+    <div class="inline field">
+      Name <input id="loadSearch" style="width: 80%" />
+    </div>
+  </div>
+  <div class="actions">
+    <button class="ui button">Cancel</button>
+    <button class="ui confirm search load button">Load</button>
+  </div>
+</div>
 </body>
 <script src="<!-- @var HOMEPAGE -->lib/jquery/dist/jquery.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/jquery.address.js"></script>
