--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -45,12 +45,14 @@
     </div>
     <div class="six wide field">
       <h3>Persistent search</h3>
-      <div class="field">
-        <input class="cron edit" style="display: none" />
+      <div class="inline field">
+        <input type="checkbox" checked id="schedule" /> Schedule <input class="cron search" style="display: none" />
       </div>
       <div class="two inline fields">
         <label for="scrapeSave">Name</label> 
-        <input id="scrapeName" style="width: 60%" />  <button class="ui mini button"><i class="save icon"></i></button>
+        <input id="searchName" style="width: 60%" />  
+        <button class="ui mini save search button"><i class="save icon"></i></button>
+        <button class="ui mini load search button"><i class="ellipsis horizontal icon"></i></button>
       </div>
     </div>
   </div>
