save and load searches

--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -46,7 +46,7 @@
     <div class="six wide field">
       <h3>Persistent search</h3>
       <div class="inline field">
-        <input type="checkbox" checked id="schedule" /> Schedule <input class="cron search" style="display: none" />
+        <input type="checkbox" id="scheduleSearch" /> Schedule <span id="scheduleInput" style="display: none"><input class="cron search" style="display: none" /></span>
       </div>
       <div class="two inline fields">
         <label for="scrapeSave">Name</label> 
