--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -22,8 +22,8 @@
         <select multiple class="scraping team container" style="width: 100%" id="scrapeTeam"></select>
       </div>
       <div class="field">
-        <label for="scrapeTags">Apply tags</label>
-        <input id="scrapeTags" />
+        <label for="scrapeCategories">Apply categories</label>
+        <input id="scrapeCategories" />
       </div>
     </div>
     <div class="two wide function field">
@@ -49,8 +49,8 @@
         <input type="checkbox" id="scheduleSearch" /> Schedule <span id="scheduleInput" style="display: none"><input class="cron search" style="display: none" /></span>
       </div>
       <div class="two inline fields">
-        <label for="scrapeSave">Name</label> 
-        <input id="searchName" style="width: 60%" />  
+        <label for="scrapeSave">Name</label>
+        <input id="searchName" style="width: 60%" />
         <button class="ui mini save search button"><i class="save icon"></i></button>
         <button class="ui mini load search button"><i class="ellipsis horizontal icon"></i></button>
       </div>
