adding utils and startup

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -35,7 +35,7 @@
       <i class="checkmark icon"></i>
     </a>
     <a title="Invert selection" class="select invert item">
-      <i class="checkmark sign icon"></i> 
+      <i class="checkmark sign icon"></i>
     </a>
     <div class="ui requires selected dropdown item">
       <i class="reorder icon"></i>
@@ -53,10 +53,10 @@
       <div class="ui red selected label count" style="width: 3em; text-align: center">0</div>
     </div>
     <div title="Select results visualisation" class="ui visualization dropdown item">
-      <i class="unhide icon"></i> 
+      <i class="unhide icon"></i>
       <div class="menu">
         <a title="Table view" class="table visualisation item">
-          Table 
+          Table
         </a>
         <a title="Timeline view" class="scatter visualisation item">
           Scatter
@@ -67,7 +67,7 @@
       </div>
     </div>
     <a title="Toggle item details" class="details toggle item">
-      <i class="edit icon"></i> 
+      <i class="edit icon"></i>
     </a>
     <a title="Show query filters" class="ui query toggle item">
       <i class="filter icon"></i>
@@ -80,7 +80,7 @@
       </div>
     </div>
     <a title="Toggle team" class="team toggle item">
-      <i class="users icon"></i> 
+      <i class="users icon"></i>
     </a>
     <a title="Show search" class="ui scrape toggle item">
       <i class="sun icon"></i>
@@ -90,7 +90,7 @@
     </a>
     <div title="Sign out" class="right menu">
       <a class="signout item">
-        <i class="sign out icon"></i> 
+        <i class="sign out icon"></i>
       </a>
     </div>
   </div>
@@ -195,14 +195,12 @@
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.min.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/browseCluster.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/browseAnnotations.js"></script>
-
-<script src="<!-- @var HOMEPAGE -->member.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
 
 <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.css" />
 <script defer="true" type="text/javascript" src="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.js"></script>
 <script defer="true" type="text/javascript" src="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.en.js"></script>
+
+<script src="<!-- @var HOMEPAGE -->member.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/index.js"></script>
 
 </html>
