add libs task for external libraries, update documentation

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.css" />
   <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.css" />
   <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/dashboard.css" />
+  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.css" />
 </head>
 <body>
 <div class="ui details right sidebar">
@@ -182,22 +183,7 @@
   </div>
 </div>
 </body>
-<script src="<!-- @var HOMEPAGE -->lib/jquery/dist/jquery.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/lib/jquery.address.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/lib/tablesort.js"></script>
-<script src="<!-- @var HOMEPAGE -->lib/jquery-ui/ui/jquery-ui.js"></script>
-<script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
-<script src="<!-- @var HOMEPAGE -->lib/semantic-ui/build/packaged/javascript/semantic.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/dragFile.js"></script>
-<script src="<!-- @var HOMEPAGE -->lib/select2/select2.js"></script>
-
-<script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.min.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.js"></script>
-
-<link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.css" />
-<script defer="true" type="text/javascript" src="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.js"></script>
-<script defer="true" type="text/javascript" src="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.en.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/libs.min.js"></script>
 
 <script src="<!-- @var HOMEPAGE -->member.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/index.js"></script>
