--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -2,14 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->lib/semantic-ui/build/packaged/css/semantic.css">
-  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->lib/select2/select2.css">
-  <link rel="stylesheet" href="<!-- @var HOMEPAGE -->lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
-  <link rel="stylesheet" href="<!-- @var HOMEPAGE -->lib/jstree/dist/themes/default/style.min.css" />
-  <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.css" />
-  <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.css" />
+  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/libs.css" />
   <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/dashboard.css" />
-  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/lib/jqCron/jqCron.css" />
 </head>
 <body>
 <div class="ui details right sidebar">
