changing scrape to search, rearrange search form

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -77,7 +77,7 @@
     <a title="Toggle team" class="team toggle item">
       <i class="users icon"></i>
     </a>
-    <a title="Show search" class="ui scrape toggle item">
+    <a title="Show search" class="ui search toggle item">
       <i class="sun icon"></i>
     </a>
     <a title="Show dashboard" class="ui dashboard toggle item">
@@ -95,8 +95,8 @@
   <div class="query content hidden">
   include "query.html"
   </div>
-  <div class="scrape content hidden">
-  include "scrape.html"
+  <div class="search content hidden">
+  include "search.html"
   </div>
 
   <div id="uploadInfo" class="hidden">
