--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/libs.css" />
-  <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/dashboard.css" />
+  <link rel="stylesheet" type="text/css" href="libs.css" />
+  <link rel="stylesheet" href="dashboard.css" />
 </head>
 <body>
 <div class="ui details right sidebar">
@@ -66,7 +66,7 @@
     </a>
     <a title="Show query filters" class="ui query toggle item">
       <i class="filter icon"></i>
-      <span id="queryCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /></span>
+      <span id="queryCount"><img src="loading.gif" alt="loading results" /></span>
     </a>
     <div class="item">
       <div class="ui small query icon input">
@@ -177,9 +177,9 @@
   </div>
 </div>
 </body>
-<script src="<!-- @var HOMEPAGE -->__wm/libs.min.js"></script>
+<script src="libs.min.js"></script>
 
-<script src="<!-- @var HOMEPAGE -->member.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/index.js"></script>
+<script src="../../member.js"></script>
+<script src="index.js"></script>
 
 </html>
