--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -27,8 +27,8 @@
   </div>
   <div class="ui form" style="background: #ffe; padding: 4px; padding-bottom: 0px">
     <div class="two inline fields">
-      
-      <label for="treeFilter">Filter (<span id="annotationCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /></span>)</label>
+
+      <label for="treeFilter">Filter (<span id="annotationCount"><img src="loading.gif" alt="loading results" /></span>)</label>
       <input id="treeFilter" />
     </div>
     <div id="treeContainer" style="font-size: 80%; overflow: auto; padding: 4px">
