--- a/contrib/__wm/injected-iframe.html
+++ b/contrib/__wm/injected-iframe.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta charset="utf-8">
-<link rel="stylesheet" href="/__wm/lib/jstree.style.min.css" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->__wm/libs.css" />
+  <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/dashboard.css" />
 </head>
 <body style="padding: 0px; margin: 0px">
   <div style="background: black; padding: 6px; margin: 0px; height: 1em">
@@ -13,12 +14,7 @@
   <span style="background: white; float: right" a class="ui black circular label" id="annotationCount"> &nbsp;  </span>
 </div>
   <div id="treeContainer" style="position: fixed; top: 2em; overflow: auto; width: 100%; height: 90%"></div>
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="<!-- @var HOMEPAGE -->lib/faye/include.js"></script>
-  <script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
-  <script src="<!-- @var HOMEPAGE -->member.js" defer="defer"></script>
-  <script src="/__wm/injected-iframe.js" defer="defer"></script>
+  <script src="<!-- @var HOMEPAGE -->__wm/index-injected.js" defer="defer"></script>
+  <script src="<!-- @var HOMEPAGE -->__wm/libs.min.js"></script>
 
 </body>
-
