--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -19,7 +19,7 @@
       <i class="add icon"></i>
     </div>
   </div>
-  include "iframe-contents.html"
+  include "./includes/edit-annos.html"
 </div>
 <div class="ui left very wide browse sidebar">
   <div id="browse" style="width: 100%; height: 98%"></div>
@@ -90,13 +90,13 @@
     </div>
   </div>
   <div class="team content hidden">
-  include "team.html"
+  include "./includes/team.html"
   </div>
   <div class="query content hidden">
-  include "query.html"
+  include "./includes/query.html"
   </div>
   <div class="search content hidden">
-  include "search.html"
+  include "./includes/search.html"
   </div>
 
   <div id="uploadInfo" class="hidden">
