lots more cleaning up. nearly done

--- a/web/iframe/injected-iframe.html
+++ b/web/iframe/injected-iframe.html
@@ -18,7 +18,6 @@
   <script src="<!-- @var HOMEPAGE -->lib/faye/include.js"></script>
   <script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
   <script src="<!-- @var HOMEPAGE -->member.js" defer="defer"></script>
-  <script src="/__wm/injected-iframe.js" defer="defer"></script>
+  <script src="injected-iframe.js" defer="defer"></script>
 
 </body>
-
