--- a/web/iframe/injected-iframe.html
+++ b/web/iframe/injected-iframe.html
@@ -2,8 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta charset="utf-8">
-<link rel="stylesheet" href="/__wm/lib/jstree.style.min.css" />
-</head>
+<link rel="stylesheet" href="libs.css" />
 <body style="padding: 0px; margin: 0px">
   <div style="background: black; padding: 6px; margin: 0px; height: 1em">
   <i class="minus checkbox inverted icon"></i>
@@ -14,10 +13,7 @@
 </div>
   <div id="treeContainer" style="position: fixed; top: 2em; overflow: auto; width: 100%; height: 90%"></div>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="<!-- @var HOMEPAGE -->lib/faye/include.js"></script>
-  <script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
-  <script src="<!-- @var HOMEPAGE -->member.js" defer="defer"></script>
-  <script src="injected-iframe.js" defer="defer"></script>
+  <script src="libs.min.js"></script>
+  <script src="index-injected.js" defer="defer"></script>
 
 </body>
