client side pubsub module

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -179,7 +179,7 @@
 </body>
 <script src="libs.min.js"></script>
 
-<script src="../../member.js"></script>
+<script src="member.js"></script>
 <script src="index.js"></script>
 
 </html>
