--- a/web/iframe/injected-iframe.html
+++ b/web/iframe/injected-iframe.html
@@ -15,5 +15,5 @@
 
   <script src="libs.min.js"></script>
   <script src="index-injected.js" defer="defer"></script>
-
+  <script src="member.js"></script>
 </body>
