--- a/web/iframe/injected-iframe.html
+++ b/web/iframe/injected-iframe.html
@@ -2,8 +2,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta charset="utf-8">
-<link rel="stylesheet" href="/__wm/libs.css" />
+<link rel="stylesheet" href="http://floaty.zooid.org:9999/libs.css" />
 <body style="padding: 0px; margin: 0px">
+  <div id="sbPortal" style="height: 100%; width: 100%"></div>
   <script src="/__wm/libs.min.js"></script>
   <script src="/__wm/index-injected.js" defer="defer"></script>
   <script src="/__wm/member.js"></script>
