--- a/web/iframe/iframe.html
+++ b/web/iframe/iframe.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta charset="utf-8">
-<link rel="stylesheet" href="http://floaty.zooid.org:9999/libs.css" />
+<link rel="stylesheet" href="<%= homepage %>libs.css" />
 <body style="padding: 0px; margin: 0px">
   <div id="sbPortal" style="height: 100%; width: 100%"></div>
   <script src="/__wm/libs.min.js"></script>
