--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="libs.css" />
+  <link rel="stylesheet" type="text/css" href="lib/libs.css" />
   <link rel="stylesheet" href="dashboard.css" />
 </head>
 <body>
