relative dashboard, proxy, and remote site all seem ok now

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -177,7 +177,7 @@
   </div>
 </div>
 </body>
-<script src="libs.min.js"></script>
+<script src="lib/libs.min.js"></script>
 
 <script src="member.js"></script>
 <script src="index.js"></script>
