--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -83,11 +83,11 @@
     <a title="Show dashboard" class="ui dashboard toggle item">
       <i class="dashboard icon"></i>
     </a>
-    <div title="Sign out" class="right menu">
+    <span title="Sign out" class="right menu">
       <a class="signout item">
         <i class="sign out icon"></i>
       </a>
-    </div>
+    </span>
   </div>
   <div class="team content hidden">
   include "./includes/team.html"
